--- a/index.html
+++ b/index.html
@@ -3,14 +3,75 @@
     <head>
         <meta charset="utf-08">
         <meta name="viewport" content="width=device-width, unitial-scale=1">
-        <title>Liu Kang's Chinese Restaurant</title>
-        <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/bootstrap.min.css">
+        <title>Liu Kang's Bistro</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/css.css">
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link rel="icon" href="https://i.pinimg.com/736x/a5/2c/b5/a52cb51a9c8a235b90c8538115efc195.jpg">
+        
     </head>
     <body>
-        aaaaaaa testanto fonte
-        <p>fonte diferente</p>
+        <header>
+            <nav id="header-nav" class="navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a href="index.html" class="pull-left visible-md visible-lg">
+                            <div id="logo-img"></div>
+                        </a>
+                        <div class="navbar-brand">
+                            <a href="index.html"><h1>Liu Kang's Bistro</h1></a>
+                            <p>
+                                <img src="images/star1.png" width="30" height="30">
+                                <span>Kosher Certified</span>
+                            </p>
+                        </div>
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                          </button>
+                    </div>
+
+                    <div id="collapsable-nav" class="collapse navbar-collapse">
+                        <ul id="nav-list" class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="menu-categories.html">
+                                    <span class="glyphicon glyphicon-cutlery"></span>
+                                    <br class="hidden-xs">
+                                    Menu
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-info-sign"></span>
+                                    <br class="hidden-xs">
+                                    About
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-certificate"></span>
+                                    <br class="hidden-xs">
+                                    Awards
+                                </a>
+                            </li>
+                            <li id="phone" class="hidden-xs">
+                                <a href="tel:3710-1472">
+                                    <span>3710-1472</span>
+                                </a>
+                                <div>
+                                * We Deliver
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/script.js"></script> 
     </body>
 </html>
