--- a/index.html
+++ b/index.html
@@ -89,6 +89,42 @@
         <div class="jumbotron">
             <img src="images/jumbotron/jumbotron1920.jpg" alt="Picture of Liu Kang" class="img-responsive visible-xs">
         </div>
+
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="menu-categories.html">
+                <div id="menu-tile">
+                    <span>
+                        menu
+                    </span>
+                </div>
+            </a>
+        </div>
+
+
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="single-categories.html">
+                <div id="specials-tile">
+                    <span>
+                        specials
+                    </span>
+                </div>
+            </a>
+        </div>
+
+
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="">
+                <div id="map-tile">
+                    <span>
+                        map
+                    </span>
+                </div>
+            </a>
+        </div>
+
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
