--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@
             </a>
         </div>
 
-
-
         <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="single-categories.html">
                 <div id="specials-tile">
@@ -112,8 +110,6 @@
                 </div>
             </a>
         </div>
-
-
 
         <div class="col-md-4 col-sm-12 col-xs-12">
             <a href="https://goo.gl/maps/kTCaEhDCv9Auyw8E6">
@@ -125,8 +121,35 @@
                 </div>
             </a>
         </div>
-
     </div>
+        
+        <footer class="panel-footer">
+            <div class="container">
+                <div class="row">
+                    <section id="hours" class="col-sm-4">
+                        <span>Hours:</span><br>
+                        Sun-Thurs: 11:15am - 10:00pm<br>
+                        Fri: 11:15am - 2:30pm<br>
+                        Saturday Closed
+                        <hr class="visible-xs">
+                    </section>
+                    <section id="address" class="col-sm-4">
+                        <span>Address:</span><br>
+                        7105 Reistertown Road<br>
+                        Baltimore, MD 21215
+                        <p>* Delivery area within 3-4 miles, with minimun order of $20 plus $3 charge for all deliveries</p>
+                        <hr class="visible-xs">
+                    </section>
+                    <section id="hours" class="col-sm-4">
+                        <p>"The best Chinese restaurant I've been to"</p>
+                        <p>"Amazing food"</p>
+                        <hr class="visible-xs">
+                    </section>
+                </div>
+                <div class="text-center">&copy; Copyright Liu Kang's China Bistro 2022</div>
+            </div>
+        </footer>
+    
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
