--- a/single-category.html
+++ b/single-category.html
@@ -43,6 +43,13 @@
 
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="index.html">
+                                <span class="glyphicon glyphicon-home"></span>
+                                <br class="hidden-xs">
+                                Home
+                            </a>
+                        </li>
                         <li class="active">
                             <a href="menu-categories.html">
                                 <span class="glyphicon glyphicon-cutlery"></span>
@@ -86,6 +93,8 @@
     </header>
 
     <div id="main-content" class="container">
+        <h2 id="single-category-title" class="text-center">Lunch</h2>
+        <div class="text-center">Comidas boas para comer na hora de comer do meio dia</div>
         <section class="row">
             <div class="menu-item-tile col-md-6">
                 <div class="row">
@@ -102,13 +111,183 @@
                     <div class="menu-item-description col-sm-7">
                         <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
                         <p class="menu-item-details">
-                            Em linguagem comum, denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
-                             A parte comestível pode ser a raiz, o tubérculo, o bolbo, o fruto, a flor, as folhas, o talo ou o grão.  
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
                         </p>
                     </div>
                 </div>
                 <hr class="visible-xs">
             </div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D02</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="clearfix visible-mb-block visible-lg-block"></div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D03</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D4</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="clearfix visible-mb-block visible-lg-block"></div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D05</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D06</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="clearfix visible-mb-block visible-lg-block"></div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D07</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D08</div>
+                            <img class="image-responsive" src="images/jumbotron/jumbotron768.jpg" width="250" height="150">
+                        </div>
+                        <div class="menu-item-price">
+                            $10.95<span>(pint)</span>
+                            $14.95<span>(quart)</span>
+                        </div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Negocio com vegetais misturados</h3>
+                        <p class="menu-item-details">
+                            Denomina-se de legume qualquer planta comestível ou parte comestível de planta leguminosa ou herbácea.
+                             A parte comestível pode ser a raiz, o tubérculo, o bolbo e etc.  
+                        </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+            <div class="clearfix visible-mb-block visible-lg-block"></div>
+
         </section>        
     </div>
         
