--- a/module3/index.html
+++ b/module3/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="js/script.js"></script>
-    </head>
-    <body>
-        <h1>Module 3</h1>    
-    
-        <script>
-            console.log(x);
-        </script>
-    </body>
-    
+
+<head>
+    <meta charset="utf-8">
+
+</head>
+
+<body>
+    <h1>Module 3</h1>
+    <input id="word" type="text">
+    <button id="send">Validar</button>
+    <script src="js/script.js"></script>
+</body>
+
 
 </html>
