--- a/telas/categories.html
+++ b/telas/categories.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="#" onclick="$dc.loadMenuItems('{{short_name}}');">
+    <a href="#" onclick="$dc.loadMenuItems('{{short_name}}.json');">
         <div class="category-tile">
             <img width="200" height="200" src="images/{{short_name}}.jpg" alt="{{name}}">
             <span>{{name}}</span>
