--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
-                        <li class="active">
+                        <li id="navhomebutton" class="active">
                             <a href="index.html">
                                 <span class="glyphicon glyphicon-home"></span>
                                 <br class="hidden-xs">
                                 Home
                             </a>
                         </li>
-                        <li>
+                        <li id="navmenubutton">
                             <a href="menu-categories.html">
                                 <span class="glyphicon glyphicon-cutlery"></span>
                                 <br class="hidden-xs">
                                 Menu
                             </a>
                         </li>
-                        <li>
+                        <li id="navaboutbutton">
                             <a href="#">
                                 <span class="glyphicon glyphicon-info-sign"></span>
                                 <br class="hidden-xs">
                                 About
                             </a>
                         </li>
-                        <li>
+                        <li id="navawardsbutton">
                             <a href="#">
                                 <span class="glyphicon glyphicon-certificate"></span>
                                 <br class="hidden-xs">
