--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Liu Kang's Bistro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/css.css">
+    <!-- <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/bootstrap.min.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
@@ -51,7 +52,7 @@
                             </a>
                         </li>
                         <li id="navmenubutton">
-                            <a href="menu-categories.html">
+                            <a href="#" onclick="$dc.loadMenuCategories();">
                                 <span class="glyphicon glyphicon-cutlery"></span>
                                 <br class="hidden-xs">
                                 Menu
